applications/infra/templates/011-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`traefik.docker.localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))'
      kind: Rule
      services:
        - kind: Service
          name: traefik
          namespace: kube-system
          port: 9000
  tls:
    secretName: traefik.docker.localhost
