applications/infra/templates/014-argo-rollouts.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-route
  namespace: argo-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`argo-rollouts.docker.localhost`)'
      kind: Rule
      services:
        - kind: Service
          name: argo-rollouts-dashboard
          namespace: argo-system
          port: 3100
          passHostHeader: true
  tls:
    secretName: argo-rollouts.docker.localhost
