applications/infra/templates/015-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: argo-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`prometheus.docker.localhost`)'
      kind: Rule
      services:
        - kind: Service
          name: prometheus-server
          namespace: prometheus
          port: 80
          passHostHeader: true
  tls:
    secretName: prometheus.docker.localhost
