applications/infra/templates/016-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: argo-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`grafana.docker.localhost`)'
      kind: Rule
      services:
        - kind: Service
          name: grafana
          namespace: grafana
          port: 80
          passHostHeader: true
  tls:
    secretName: grafana.docker.localhost
